Alteração no titulo

--- a/CursoHTML5/site final/index.html
+++ b/CursoHTML5/site final/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 	<metacharset="UTF-8">
-	<title>lu pessoa - desenvolvimento web</title>
+	<title>Lú Pessoa Macedo - desenvolvimento web</title>
 	<link rel="stylesheet"href="css/normalize.css"/>
 	<link rel="stylesheet"href="css/estilo.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
